syntax = "proto3";

package telemetry.service.hubrouter;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "ru.yandex.practicum.grpc.telemetry.hubrouter";
option java_multiple_files = true;

/////////////////////////////////////////////////////
// ACTION MESSAGE
/////////////////////////////////////////////////////

message DeviceActionProto {
  string type = 1;
  int32 value = 2;
}

/////////////////////////////////////////////////////
// REQUEST MESSAGE
/////////////////////////////////////////////////////

message DeviceActionRequest {
  string hub_id = 1;
  string scenario_name = 2;
  DeviceActionProto action = 3;
  google.protobuf.Timestamp timestamp = 4;
}

/////////////////////////////////////////////////////
// SERVICE
/////////////////////////////////////////////////////

service HubRouterController {

  rpc handleDeviceAction(DeviceActionRequest)
      returns (google.protobuf.Empty);
}
